--- a/views/guest/viva.hbs
+++ b/views/guest/viva.hbs
@@ -116,16 +116,20 @@
         <h2>Quiz</h2>
         <form id="quizForm" action="Admin/result" method="post">
 
-            <!-- User Details Section -->
-            <div class="input-container">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="user[name]" placeholder="Enter your full name" required>
-            </div>
+         <div class="input-container">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="user[name]" value="{{student.name}}" readonly>
+</div>
 
-            <div class="input-container">
-                <label for="roll">Roll Number:</label>
-                <input type="text" id="roll" name="user[roll]" placeholder="Enter your roll number" required>
-            </div>
+<div class="input-container">
+    <label for="roll">Roll Number</label>
+    <input type="text" id="roll" name="user[roll]" value="{{student.roll}}" readonly>
+</div>
+
+<div class="input-container">
+    <label for="registernumber">Register Number</label>
+    <input type="text" id="registernumber" name="user[registernumber]" value="{{student.registernumber}}" readonly>
+</div>
 
             <div class="input-container">
                 <label for="department">Department:</label>
