Updated files with new modifications

--- a/views/guest/login.hbs
+++ b/views/guest/login.hbs
@@ -52,7 +52,7 @@
             <input type="text" name="name" placeholder="Enter Your Name" required>
           
             <input type="text" name="roll" placeholder="Enter Your Roll Number" required>
-            <input type="text" name="registernumber" placeholder="Enter register number" required>
+            <input type="text" name="register" placeholder="Enter register number" required>
             <button type="submit">Login</button>
         </form>
     </div>
