--- a/views/superadmin/home.hbs
+++ b/views/superadmin/home.hbs
@@ -10,7 +10,8 @@
 <body style="font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; gap: 20px; padding: 20px; background-color: #f4f4f4;">
 
     <button style="background: #007BFF; color: rgb(17, 227, 21); border: none; padding: 12px 20px; cursor: pointer; border-radius: 8px; font-size: 16px; font-weight: bold; transition: 0.3s;">
-        <a href="/superadmin/addnewadmin" style="color: inherit; text-decoration: none;">ADD ADMIN</a>
+       <a href="/superadmin/addStudent" style="color: inherit; text-decoration: none;">ADD student</a>
+       
     </button>
 
     <!-- Wrap all user cards inside one flex container -->
@@ -23,7 +24,10 @@
             <button style="background: #f44336; color: white; border: none; padding: 10px 15px; cursor: pointer; border-radius: 8px; margin-left: 8px; transition: 0.3s;">Delete</button>
         </div>
         {{/each}}
+   
     </div>
+     <a href="/superadmin/addnewadmin" style="color: inherit; text-decoration: none;">ADD ADMIN</a>
+
 
 </body>
 </html>
